--- a/section01/index.html
+++ b/section01/index.html
@@ -1,8 +1,9 @@
 <html>
-    <head>
-        <script src="./chapter05.js"></script> <!-- '.': 현재 경로-->
-    </head>
-    <body>
-        Hello World
-    </body>
+  <head>
+    <script src="./chapter06.js"></script>
+    <!-- '.': 현재 경로-->
+  </head>
+  <body>
+    Hello World
+  </body>
 </html>
