--- a/section01/index.html
+++ b/section01/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="./chapter17.js"></script>
+    <script src="/section02/chapter01.js"></script>
     <!-- '.': 현재 경로-->
   </head>
   <body>
